# platform

./: Cargo.toml
.github/workflows/: build.yml
src/: config.rs  foldersync.rs  main.rs  server.rs  software.rs  ui.rs
