[package]
name = "Platform"
description = "cli minecraft server manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "platform"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.0"
dialoguer = "0.12"
colored = "3.1.1"
anyhow = "1.0.102"
dirs = "6"